--- a/data/project.json
+++ b/data/project.json
@@ -4,7 +4,13 @@
     "publish_sha": "",
     "publish_iso_date": ""
   },
-  "users": [],
+  "users": [
+    {
+      "login_name": "egorobets",
+      "avatar_url": "https://avatars.githubusercontent.com/u/117395971?v=4",
+      "admin": true
+    }
+  ],
   "project": {
     "github_org": "egorobets",
     "is_private": false,
@@ -22,6 +28,27 @@
       "tags": []
     },
     "created_at": "2025-10-15T00:45:34.134Z",
-    "updated_at": "2025-10-15T00:45:34.134Z"
-  }
+    "updated_at": "2025-10-15T00:45:34.134Z",
+    "generate_pages_site": true
+  },
+  "annotations": {},
+  "events": {},
+  "eventOrder": [],
+  "pages": {
+    "992c0412-529d-4f27-a155-9b2ca31f384d": {
+      "content": [],
+      "created_at": "2025-10-15T00:45:34.154Z",
+      "created_by": "egorobets",
+      "title": "Escutando sobre povos indígenas em português",
+      "updated_at": "2025-10-15T00:45:34.154Z",
+      "updated_by": "egorobets",
+      "autogenerate": {
+        "enabled": true,
+        "type": "home"
+      }
+    }
+  },
+  "pageOrder": [
+    "992c0412-529d-4f27-a155-9b2ca31f384d"
+  ]
 }
