--- a/data/project.json
+++ b/data/project.json
@@ -1,1 +1,385 @@
-{"publish":{"publish_pages_app":true,"publish_sha":"","publish_iso_date":"","publish_static_site":false},"users":[{"login_name":"egorobets","avatar_url":"https://avatars.githubusercontent.com/u/117395971?v=4","admin":true}],"project":{"github_org":"egorobets","is_private":false,"title":"Escutando sobre povos indígenas em português","description":"This project consists in interactive lessons that combine linguistic skills with cultural awareness about Indigenous peoples of Latin America. The project is divided in lessons to be used in Portuguese classes looking to expand cultural perspectives while reinforcing language acquisition.","language":"pt","slug":"escutandopovosindigenas","creator":"egorobets","authors":"Eduardo Gorobets","media_player":"avannotate","auto_populate_home_page":true,"additional_users":[],"tags":{"tagGroups":[{"color":"#FF9A6F","category":"Grammar"},{"color":"#88C9F2","category":"Vocabulary"},{"color":"#A9D69A","category":"Sociocultural Aspects of Language"},{"category":"_uncategorized_","color":"#A3A3A3"},{"color":"#F7ED78","category":"Transcriptions"}],"tags":[{"category":"Grammar","tag":"Grammar"},{"category":"Vocabulary","tag":"Vocabulary"},{"category":"Sociocultural Aspects of Language","tag":"Sociocultural Aspects of Language"},{"category":"Grammar","tag":"Nouns"},{"category":"Vocabulary","tag":"Things to make a forest"},{"category":"Grammar","tag":"Verb ser"},{"category":"Grammar","tag":"Present"},{"category":"Grammar","tag":"Future"},{"category":"Vocabulary","tag":"Forests"},{"category":"Vocabulary","tag":"Pastures"},{"category":"Grammar","tag":"Formal pronouns"},{"category":"Vocabulary","tag":"Tree seeds"},{"category":"Sociocultural Aspects of Language","tag":"Greetings"},{"category":"Vocabulary","tag":"Muvuca"},{"category":"Vocabulary","tag":"Xavante"},{"category":"Grammar","tag":"Verbs"},{"category":"Vocabulary","tag":"Rural producers"},{"category":"Grammar","tag":"Past"},{"category":"Vocabulary","tag":"Motivos"},{"category":"Vocabulary","tag":"Catholicism"},{"category":"Grammar","tag":"Ter"},{"category":"Vocabulary","tag":"Art"},{"category":"Grammar","tag":"Use of por and para"},{"category":"Vocabulary","tag":"Sacred art"},{"category":"Vocabulary","tag":"Indigenous art"},{"category":"Vocabulary","tag":"Giving birth knowledge"},{"category":"Sociocultural Aspects of Language","tag":"Tag questions"},{"category":"Vocabulary","tag":"Concerns"},{"category":"Vocabulary","tag":"Reflection"},{"category":"Vocabulary","tag":"College"},{"category":"Vocabulary","tag":"Identity"},{"category":"Vocabulary","tag":"Art studies"},{"category":"Vocabulary","tag":"Women"},{"category":"Transcriptions","tag":"Transcrição"},{"category":"Sociocultural Aspects of Language","tag":"Short Interview"},{"category":"Sociocultural Aspects of Language","tag":"Interview"},{"category":"Vocabulary","tag":"Indigenous identity"},{"category":"Vocabulary","tag":"Traditions"},{"category":"Vocabulary","tag":"Urban context"},{"category":"Vocabulary","tag":"Geography"},{"category":"Vocabulary","tag":"Place of Birth"},{"category":"Vocabulary","tag":"Traditional constructions"},{"category":"Grammar","tag":"Imperfect"},{"category":"Vocabulary","tag":"Exploitation"},{"category":"Vocabulary","tag":"Rubber boom"},{"category":"Vocabulary","tag":"Administrative institutions"},{"category":"Vocabulary","tag":"Schools"},{"category":"Vocabulary","tag":"Health"},{"category":"Vocabulary","tag":"Cambeba language"},{"category":"Vocabulary","tag":"Changes"},{"category":"Vocabulary","tag":"Ticuna language"},{"category":"Vocabulary","tag":"Indigenous languages"},{"category":"Vocabulary","tag":"Importance of the River"},{"category":"Vocabulary","tag":"New Constructions"},{"category":"Vocabulary","tag":"River"},{"category":"Vocabulary","tag":"Environment"},{"category":"Vocabulary","tag":"Elders"},{"category":"Vocabulary","tag":"Wisdom"},{"category":"Vocabulary","tag":"Cultural traditions"},{"category":"Grammar","tag":"Possessive Pronouns"},{"category":"_uncategorized_","tag":"Introductions"},{"category":"_uncategorized_","tag":"Misconceptions"},{"category":"_uncategorized_","tag":"Pronouns"},{"category":"_uncategorized_","tag":"Precise information"},{"category":"_uncategorized_","tag":"Infinitive"},{"category":"_uncategorized_","tag":"Plurinational countries"},{"category":"_uncategorized_","tag":"National identities"},{"category":"_uncategorized_","tag":"Indigenous history"},{"category":"_uncategorized_","tag":"Migration"},{"category":"_uncategorized_","tag":"Cultural diversity"},{"category":"_uncategorized_","tag":"Indigenous persistence"},{"category":"_uncategorized_","tag":"Colonization"},{"category":"_uncategorized_","tag":"Indigenous peoples nowadays"},{"category":"_uncategorized_","tag":"Isolated groups"},{"category":"_uncategorized_","tag":"Indigenous presence in Brazil"},{"category":"_uncategorized_","tag":"Natural heritage"},{"category":"_uncategorized_","tag":"Brazil's identity"}]},"created_at":"2025-10-15T00:45:34.134Z","updated_at":"2025-12-10T19:56:28.882Z","generate_pages_site":true},"annotations":{},"events":{},"eventOrder":[],"pages":{"992c0412-529d-4f27-a155-9b2ca31f384d":{"content":[],"created_at":"2025-10-15T00:45:34.154Z","created_by":"egorobets","title":"Escutando sobre povos indígenas em português","updated_at":"2025-10-15T00:45:34.154Z","updated_by":"egorobets","autogenerate":{"enabled":true,"type":"home"}}},"pageOrder":["992c0412-529d-4f27-a155-9b2ca31f384d"]}
+{
+  "publish": {
+    "publish_pages_app": true,
+    "publish_sha": "",
+    "publish_iso_date": "",
+    "publish_static_site": false
+  },
+  "users": [
+    {
+      "login_name": "egorobets",
+      "avatar_url": "https://avatars.githubusercontent.com/u/117395971?v=4",
+      "admin": true
+    }
+  ],
+  "project": {
+    "github_org": "egorobets",
+    "is_private": false,
+    "title": "Escutando sobre povos indígenas em português",
+    "description": "This project consists in interactive lessons that combine linguistic skills with cultural awareness about Indigenous peoples of Latin America. The project is divided in lessons to be used in Portuguese classes looking to expand cultural perspectives while reinforcing language acquisition.",
+    "language": "pt",
+    "slug": "escutandopovosindigenas",
+    "creator": "egorobets",
+    "authors": "Eduardo Gorobets",
+    "media_player": "avannotate",
+    "auto_populate_home_page": true,
+    "additional_users": [],
+    "tags": {
+      "tagGroups": [
+        {
+          "color": "#FF9A6F",
+          "category": "Grammar"
+        },
+        {
+          "color": "#88C9F2",
+          "category": "Vocabulary"
+        },
+        {
+          "color": "#A9D69A",
+          "category": "Sociocultural Aspects of Language"
+        },
+        {
+          "category": "_uncategorized_",
+          "color": "#A3A3A3"
+        },
+        {
+          "color": "#F7ED78",
+          "category": "Transcriptions"
+        }
+      ],
+      "tags": [
+        {
+          "category": "Grammar",
+          "tag": "Grammar"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Vocabulary"
+        },
+        {
+          "category": "Sociocultural Aspects of Language",
+          "tag": "Sociocultural Aspects of Language"
+        },
+        {
+          "category": "Grammar",
+          "tag": "Nouns"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Things to make a forest"
+        },
+        {
+          "category": "Grammar",
+          "tag": "Verb ser"
+        },
+        {
+          "category": "Grammar",
+          "tag": "Present"
+        },
+        {
+          "category": "Grammar",
+          "tag": "Future"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Forests"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Pastures"
+        },
+        {
+          "category": "Grammar",
+          "tag": "Formal pronouns"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Tree seeds"
+        },
+        {
+          "category": "Sociocultural Aspects of Language",
+          "tag": "Greetings"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Muvuca"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Xavante"
+        },
+        {
+          "category": "Grammar",
+          "tag": "Verbs"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Rural producers"
+        },
+        {
+          "category": "Grammar",
+          "tag": "Past"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Motivos"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Catholicism"
+        },
+        {
+          "category": "Grammar",
+          "tag": "Ter"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Art"
+        },
+        {
+          "category": "Grammar",
+          "tag": "Use of por and para"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Sacred art"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Indigenous art"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Giving birth knowledge"
+        },
+        {
+          "category": "Sociocultural Aspects of Language",
+          "tag": "Tag questions"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Concerns"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Reflection"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "College"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Identity"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Art studies"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Women"
+        },
+        {
+          "category": "Transcriptions",
+          "tag": "Transcrição"
+        },
+        {
+          "category": "Sociocultural Aspects of Language",
+          "tag": "Short Interview"
+        },
+        {
+          "category": "Sociocultural Aspects of Language",
+          "tag": "Interview"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Indigenous identity"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Traditions"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Urban context"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Geography"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Place of Birth"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Traditional constructions"
+        },
+        {
+          "category": "Grammar",
+          "tag": "Imperfect"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Exploitation"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Rubber boom"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Administrative institutions"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Schools"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Health"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Cambeba language"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Changes"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Ticuna language"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Indigenous languages"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Importance of the River"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "New Constructions"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "River"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Environment"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Elders"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Wisdom"
+        },
+        {
+          "category": "Vocabulary",
+          "tag": "Cultural traditions"
+        },
+        {
+          "category": "Grammar",
+          "tag": "Possessive Pronouns"
+        },
+        {
+          "category": "_uncategorized_",
+          "tag": "Introductions"
+        },
+        {
+          "category": "_uncategorized_",
+          "tag": "Misconceptions"
+        },
+        {
+          "category": "_uncategorized_",
+          "tag": "Pronouns"
+        },
+        {
+          "category": "_uncategorized_",
+          "tag": "Precise information"
+        },
+        {
+          "category": "_uncategorized_",
+          "tag": "Infinitive"
+        },
+        {
+          "category": "_uncategorized_",
+          "tag": "Plurinational countries"
+        },
+        {
+          "category": "_uncategorized_",
+          "tag": "National identities"
+        },
+        {
+          "category": "_uncategorized_",
+          "tag": "Indigenous history"
+        },
+        {
+          "category": "_uncategorized_",
+          "tag": "Migration"
+        },
+        {
+          "category": "_uncategorized_",
+          "tag": "Cultural diversity"
+        },
+        {
+          "category": "_uncategorized_",
+          "tag": "Indigenous persistence"
+        },
+        {
+          "category": "_uncategorized_",
+          "tag": "Colonization"
+        },
+        {
+          "category": "_uncategorized_",
+          "tag": "Indigenous peoples nowadays"
+        },
+        {
+          "category": "_uncategorized_",
+          "tag": "Isolated groups"
+        },
+        {
+          "category": "_uncategorized_",
+          "tag": "Indigenous presence in Brazil"
+        },
+        {
+          "category": "_uncategorized_",
+          "tag": "Natural heritage"
+        },
+        {
+          "category": "_uncategorized_",
+          "tag": "Brazil's identity"
+        }
+      ]
+    },
+    "created_at": "2025-10-15T00:45:34.134Z",
+    "updated_at": "2025-12-10T19:56:30.369Z",
+    "generate_pages_site": true
+  },
+  "annotations": {},
+  "events": {},
+  "eventOrder": [],
+  "pages": {
+    "992c0412-529d-4f27-a155-9b2ca31f384d": {
+      "content": [],
+      "created_at": "2025-10-15T00:45:34.154Z",
+      "created_by": "egorobets",
+      "title": "Escutando sobre povos indígenas em português",
+      "updated_at": "2025-10-15T00:45:34.154Z",
+      "updated_by": "egorobets",
+      "autogenerate": {
+        "enabled": true,
+        "type": "home"
+      }
+    }
+  },
+  "pageOrder": [
+    "992c0412-529d-4f27-a155-9b2ca31f384d"
+  ]
+}
